--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:System San Francisco Display 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -22,6 +22,9 @@ font pango:monospace 8
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
+
+# Smart borders - turn on active smart borders
+hide_edge_borders both
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -48,15 +51,22 @@ floating_modifier $mod
 bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
-bindsym $mod+Shift+slash kill
+bindsym $mod+Shift+Q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+e exec --no-startup-id dmenu_run
+# bindsym $mod+e exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+#
+# using Rofi to open a program
+bindsym $mod+d exec rofi -show run -display-run "run " -lines 5 -eh 1 -show-icons -opacity 60 -bw 4 -fg "#cccccc" -color-enabled -seperator-style solid -sidebar-mode -font "System San Francisco Display Thin 8"
+
+# using Rofi to select a window
+bindsym $mod+Shift+d exec rofi -show window -display-run "window " -eh 1 -opacity 60 -bw 4 -fg "#cccccc" -color-enabled -separator-style solid -sidebar-mode -font "System San Francisco Display Thin 8"
+
 
 # change focus
 bindsym $mod+h focus left
@@ -83,18 +93,19 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+d split h
+bindsym $mod+p split h
 
 # split in vertical orientation
-bindsym $mod+k split v
+bindsym $mod+y split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+u fullscreen toggle
+bindsym $mod+f fullscreen
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+o layout stacking
-bindsym $mod+comma layout tabbed
+bindsym $mod+g layout stacking
+bindsym $mod+c layout tabbed
 bindsym $mod+period layout toggle split
+bindsym $mod+r layout default
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -108,49 +119,36 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
-
 # switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+bindsym $mod+1 workspace 1: Evolution
+bindsym $mod+2 workspace 2: Firefox
+bindsym $mod+3 workspace 3: Terminal
+bindsym $mod+4 workspace 4: Emacs
+bindsym $mod+5 workspace 5: Thunar
+bindsym $mod+6 workspace 6: RetroTerminal
+bindsym $mod+7 workspace 7: Ristretto
+bindsym $mod+8 workspace 8: Gimp
+bindsym $mod+9 workspace 9: Python
+bindsym $mod+0 workspace 10: Spotify
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
+bindsym $mod+Shift+exclam move container to workspace 1: Evolution
+bindsym $mod+Shift+quotedbl move container to workspace 2: Firefox
+bindsym $mod+Shift+sterling move container to workspace 3: Terminal
+bindsym $mod+Shift+dollar move container to workspace 4: Emacs
+bindsym $mod+Shift+percent move container to workspace 5: Thunar
+bindsym $mod+Shift+asciicircum move container to workspace 6: RetroTerminal
+bindsym $mod+Shift+ampersand move container to workspace 7: Ristretto
+bindsym $mod+Shift+asterisk move container to workspace 8: Gimp
+bindsym $mod+Shift+parenleft move container to workspace 9: Python
+bindsym $mod+Shift+parenright move container to workspace 10: Spotify
 
 # reload the configuration file
-bindsym $mod+Shift+j reload
+bindsym $mod+Shift+C reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+p restart
+bindsym $mod+Shift+R restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+period exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+E exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -174,10 +172,10 @@ mode "resize" {
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
-        bindsym $mod+p mode "default"
+        bindsym $mod+l mode "default"
 }
 
-bindsym $mod+p mode "resize"
+bindsym $mod+z mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
