--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -177,8 +177,43 @@ mode "resize" {
 
 bindsym $mod+z mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
+# set variables for named colours
+set $bg-color	    	  #4f545f
+set $inact-bg-color	  #2f343f
+set $text-color		  #f3f4f5
+set $inact-text-color	  #676e7d
+set $urgent-bg-color	  #e53935
+
+
+# Start i3blocks to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command i3blocks
+	# not gonna activate autohide
+	colors {
+	background	$bg-color
+	separator	#757575
+
+	#			border			background		text
+	focused_workspace	$bg-color		$bg-color		$text-color
+	inactive_workspace	$inact-bg-color		$inact-bg-color		$inact-text-color
+	urgent_workspace	$urgent-bg-color	$urgent-bg-color	$text-color
+	}
 }
+
+# start specific windows as floating windows
+#
+# Some windows you don't want to tile. Programs that have lots of small windows, such as Gimp is an examply
+for_window [class="xpad"] floating enable
+for_window [title="Search and Select List of Values - Firefox Nightly"] floating enable
+for_window [title="Library"] floating enable
+
+# If you have a window that you want to open in float rather than
+# tiled then the information below shows how to obtain a relevant
+# setting to set this up.
+#
+# https://faq.i3wm.org/question/2172/how-do-i-find-the-criteria-for-use-with-i3-config-commands-like-for_window-eg-to-force-splashscreens-and-dialogs-to-show-in-floating-mode.1.html
+# provides guidance on how to find relevant criteria that can be used
+# to make windows float.
+
+#
