--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:System San Francisco Display 10
+font pango:System San Francisco Display 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -189,6 +189,7 @@ set $urgent-bg-color	  #e53935
 # finds out, if available)
 bar {
         status_command i3blocks
+	#tray_output none
 	# not gonna activate autohide
 	colors {
 	background	$bg-color
@@ -230,7 +231,7 @@ exec --no-startup-id i3-msg 'exec feh --randomize --bg-fill /home/rjf/Pictures/W
 # start Dropbox
 exec --no-startup-id i3-msg 'exec dropbox start'
 # start redshift to cut blue light
-exec --no-startup-id i3-msg 'exec redshift-gtk'
+#exec --no-startup-id i3-msg 'exec redshift-gtk'
 # XScreensaver launch
 exec --no-startup-id i3-msg 'exec xscreensaver'
 # Network Manager Applet
@@ -244,7 +245,7 @@ exec --no-startup-id i3-msg 'exec compton -f -b'
 # volume icon activation
 exec --no-startup-id i3-msg 'exec volumeicon'
 # xpad - post-it programs
-exec --no-startup-id i3-msg 'exec xpad'
+#exec --no-startup-id i3-msg 'exec xpad -h'
 # launch nemo file manager in background to speed starting later
 exec --no-startup-id i3-msg 'exec nemo -n'
 # start megasync
@@ -270,3 +271,7 @@ exec --no-startup-id i3-msg 'workspace 10: Spotify; exec spotify'
 # info on using multiple screens with i3 here:
 #
 # https://fedoramagazine.org/using-i3-with-multiple-monitors
+
+# Finally, to remove a couple of the extrenuous icons from the taskbar run these kill commands.
+exec --no-startup-id i3-msg 'exec killall solaar'
+exec --no-startup-id i3-msg 'exec killall blueman-tray'
