--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /emacs/.emacs.d/config.el
 /emacs/.emacs.d/eln-cache/
 /emacs/.emacs.d/elpa/
+/emacs/.emacs.d/recentf.eld
+/emacs/.emacs.d/tramp
+/emacs/.emacs.d/transient/
